Return AltGraph for right-Alt keydown/keyup, under layouts which use AltGraph.

W3C UI Events defines the "AltGraph" value for KeyboardEvent.key, to express the meaning of the right-Alt key (i.e. KeyboardEvent.code=AltRight) under layouts which use ISO Level 3 Shift to generate some characters (e.g. en-UK, fr-FR, etc).

This patch fixes Chrome to generate AltGraph under such layouts, where previously it would have generated events with key=Alt.

BUG=681363

Review-Url: https://codereview.chromium.org/2630213003
Cr-Commit-Position: refs/heads/master@{#444516}

Former-commit-id: 22d68c2c24b7c8a4d65802d2b385d09d50e575c9